Fix animation glitch on iOS

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -3,7 +3,7 @@
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   }
   25% {
-    transform: rotateX(18deg) rotateY(360deg) rotateZ(90deg);
+    transform: rotateX(180deg) rotateY(360deg) rotateZ(90deg);
   }
   50% {
     transform: rotateX(360deg) rotateY(720deg) rotateZ(180deg);
@@ -12,7 +12,7 @@
     transform: rotateX(540deg) rotateY(1080deg) rotateZ(270deg);
   }
   100% {
-    transform: rotateX(720deg) rotateY(1440deg) rotateZ(360deg);
+    transform: rotateX(690deg) rotateY(1480deg) rotateZ(360deg);
   }
 }
 @keyframes demo {
@@ -20,7 +20,7 @@
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   }
   25% {
-    transform: rotateX(18deg) rotateY(360deg) rotateZ(90deg);
+    transform: rotateX(180deg) rotateY(360deg) rotateZ(90deg);
   }
   50% {
     transform: rotateX(360deg) rotateY(720deg) rotateZ(180deg);
